--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html, body {
   margin: 0 !important;
   padding: 0 !important;
 }
+/*01110111 01100001 01101100 01110100 01100101 01110010 00100000 01000111 01100001 01100010 01110010 01101001 01100101 01101100-*/
 /* Header Bar Style */
 .header {
   height: 80px;
